# cr_flutter_libserialport

./: CHANGELOG.md  pubspec.yaml
example/: pubspec.yaml
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
lib/: cr_flutter_libserialport.dart
linux/: CMakeLists.txt  cr_flutter_libserialport_plugin.cc
linux/include/cr_flutter_libserialport/: cr_flutter_libserialport_plugin.h
linux/libserialport/: CMakeLists.txt
macos/: cr_flutter_libserialport.podspec
macos/Classes/: CrFlutterLibserialportPlugin.swift
windows/: CMakeLists.txt  cr_flutter_libserialport_plugin.cpp
windows/include/cr_flutter_libserialport/: cr_flutter_libserialport_plugin.h
windows/libserialport/: CMakeLists.txt
